objects/vlocity_cmt__PricingVariable__c.object
<CustomObject>
    <description>Represents a declared type of price, charge, cost, fee, tax, discount or adjustment to be used to price products or services. This is metadata that enables agile pricing definition to quickly bring new products to market.</description>
    <fields>
        <fullName>vlocity_cmt__AdjustmentMethod__c</fullName>
        <label>Adjustment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Absolute</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Aggregation__c</fullName>
        <label>Aggregation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unit</fullName>
                </value>
                <value>
                    <fullName>Quantity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AppliesToVariableId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applies To Variable</label>
        <referenceTo>vlocity_cmt__PricingVariable__c</referenceTo>
        <relationshipLabel>Pricing Variables Applied</relationshipLabel>
        <relationshipName>PricingVariablesApplied</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AppliesTo__c</fullName>
        <description>DEPRECATED. Use AppliesToVariableId__c field instead.</description>
        <label>Applies To</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ChargeType__c</fullName>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recurring</fullName>
                </value>
                <value>
                    <fullName>One-time</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
                <value>
                    <fullName>Adjustment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CurrencyType__c</fullName>
        <label>Currency Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Currency</fullName>
                    <default>true</default>
                    <label>Currency</label>
                </value>
                <value>
                    <fullName>Loyalty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringFrequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Scope__c</fullName>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Group Rollup</fullName>
                </value>
                <value>
                    <fullName>Line</fullName>
                </value>
                <value>
                    <fullName>Master</fullName>
                </value>
                <value>
                    <fullName>Master Rollup</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Parent Rollup</fullName>
                </value>
                <value>
                    <fullName>Rollup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubType__c</fullName>
        <label>Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Adjustment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValueType__c</fullName>
        <label>ValueType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calculated</fullName>
                </value>
                <value>
                    <fullName>Pricing Element</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Pricing Variable</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__Scope__c</columns>
        <columns>vlocity_cmt__Type__c</columns>
        <columns>vlocity_cmt__SubType__c</columns>
        <columns>vlocity_cmt__ValueType__c</columns>
        <columns>vlocity_cmt__CurrencyType__c</columns>
        <columns>vlocity_cmt__Code__c</columns>
        <columns>vlocity_cmt__ChargeType__c</columns>
        <columns>vlocity_cmt__AppliesToVariableId__c</columns>
        <columns>vlocity_cmt__AppliesTo__c</columns>
        <columns>vlocity_cmt__IsActive__c</columns>
        <columns>vlocity_cmt__AdjustmentMethod__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>vlocity_cmt__Vlocity_EPC_Pricing_Variable_List</fullName>
        <columns>vlocity_cmt__IsActive__c</columns>
        <columns>NAME</columns>
        <columns>vlocity_cmt__Code__c</columns>
        <columns>vlocity_cmt__ChargeType__c</columns>
        <columns>vlocity_cmt__SubType__c</columns>
        <columns>vlocity_cmt__RecurringFrequency__c</columns>
        <columns>vlocity_cmt__Type__c</columns>
        <columns>vlocity_cmt__AdjustmentMethod__c</columns>
        <filterScope>Everything</filterScope>
        <label>Vlocity EPC Pricing Variable List</label>
    </listViews>
    <nameField>
        <label>Pricing Variable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Variables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>